[package]
name = "chip8_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
rand = "0.8.5"
clap = { version = "3.1.9", features = ["derive"] }
macroquad = "0.3"
egui = "0.17.0"
egui-macroquad = "0.9"
egui_demo_lib = { version = "0.17.0", default-features = false }
rfd = "0.8.2"